js/js.translator/testData/incremental/invalidationWithPL/removeFunctionFromBlock/lib1/l1b.0.kt
inline fun baz() = 10
